--- a/src/layouts/components/header/header.module.css
+++ b/src/layouts/components/header/header.module.css
@@ -1,20 +1,24 @@
-.header{
-padding: 20px;
+.wrapper {
+  padding: 0;
 }
-
-.header-title a{
-    font-size: 25pt;
-    font-weight: 700;
+.header {
+  padding: 10px 0;
 }
-.header-info{
-text-align: right;
+.header_title a {
+  font-size: 25pt;
+  font-weight: 700;
 }
-
-.header-row{
-justify-content: center;
-align-items: center;
+.header_info {
+  text-align: right;
 }
-
-.header-nav-right{
-border: none;
+.header_row {
+  justify-content: center;
+  align-items: center;
+}
+.header_top ul li {
+  display: flex;
+  align-items: center;
+}
+.header_top_right {
+  border: none;
 }
