--- a/src/pages/timesheet/styles.module.css
+++ b/src/pages/timesheet/styles.module.css
@@ -1,8 +1,75 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-<plist version="1.0">
-<dict>
-	<key>URL</key>
-	<string>https://gitlab.relipa.vn/sangdx/mock_project_group1/-/blob/master/src/pages/timesheet/styles.module.css</string>
-</dict>
-</plist>
+.timesheet {
+    border: 1px solid rgb(182, 182, 182);
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.bl {
+    border: 1px solid black;
+}
+
+.timesheetTitle {
+    position: absolute;
+    left: 10px;
+    top: -15px;
+    background-color: #fff;
+}
+.formSearch {
+    padding: 5px 20px 0px 50px;
+    width: 80vw;
+}
+.myTimesheet {
+    color: #818181;
+}
+.toTheRight {
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.optionSearch {
+    margin-top: 20px;
+}
+
+.radioOption {
+    background-color: #fff;
+}
+
+.marginleft {
+    margin-left: 1px;
+}
+
+.buttonTable {
+    border: transparent;
+    background-color: transparent;
+    color: #3590ff;
+}
+
+.marginBottom {
+    margin-bottom: 10px;
+}
+a {
+    color: black;
+}
+.formatTable {
+    display: flex;
+    justify-content: center;
+}
+
+.selectOption {
+    width: 160px;
+}
+
+.boderTable {
+    border: 1px solid rgb(182, 182, 182);
+    width: 100vw;
+}
+
+.tableRowLight {
+    background-color: #e2e1b7;
+}
+
+@media only screen and (min-width: 900px) {
+    .body {
+        padding: 0 50px 0 50px;
+    }
+}
