--- a/src/pages/profiles/profile.module.css
+++ b/src/pages/profiles/profile.module.css
@@ -49,7 +49,6 @@
   justify-content: space-between;
   flex-direction: column;
   height: 400px;
-  font-weight: bold;
 }
 .flex_mr{
   display: flex;
@@ -57,18 +56,15 @@
   flex-direction: column;
   margin-right: 6rem;
   height: 350px;
-  font-weight: bold;
 }
 .f_overrall{
   height: 150px;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
 }
 .f_overrall_mr{
   height: 150px;
-  font-weight: bold;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -82,7 +78,7 @@
   margin-right: 1rem;
 }
 .l_width {
-  width: 50%;
+  width: 210px;
 }
 .r_width {
   width: 30rem;
@@ -91,10 +87,10 @@
   margin-right: 18rem;
 }
 .rr_width {
-  width: 13rem;
+  width: 15rem;
 }
 .w_width {
-  width: 115%;
+  width: 114%;
 }
 .mrr_right{
     margin-right: 1.5rem;
